--- a/style.css
+++ b/style.css
@@ -1,2 +1,37 @@
+
+@import url(normalize.css);
 body{background-color: cadetblue;color: burlywood;}
-h1{color: darkgreen;}
+h1{color: darkgreen;
+    width: 300px;
+    margin: 40px auto; 
+    padding: 30px;
+    border: 5px solid #959595;
+    background-color: blue;
+    font-size: 300%;
+    line-height: 1;
+    border-radius: 50%;
+    text-shadow: 1px 1px 2px #307657;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    background-image:linear-gradient(to bottom,#6fbb9a,#4a9d79) ;
+}
+main{
+    width: 80%;
+    background-color: rgb(255, 255, 255);
+    margin: 0px auto;
+    padding: 40px 80px;
+    border: 1px solid #f6bb9e;
+}
+h2{
+    padding: 10px;
+    margin-bottom: 30px;
+    border: 1px dotted #94cb94;
+    border-left: 10px solid #d0d0d0;
+    color: antiquewhite;
+}
+.round{
+    border-radius: 50%;
+}
+h1,header,nav,footer{
+
+    text-align: center;
+}
